Wrote a RSS feed reader class.
It lets users fetch the latest news from Coin Telegraph.

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.14</version>
         </dependency>
+        <dependency>
+            <groupId>rome</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
