--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
             <version>4.5.14</version>
         </dependency>
         <dependency>
-            <groupId>rome</groupId>
-            <artifactId>rome</artifactId>
-            <version>1.0</version>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE240</version>
         </dependency>
     </dependencies>
 </project>
