--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
             <artifactId>rome</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+          <groupId>com.brevo</groupId>
+          <artifactId>brevo</artifactId>
+          <version>1.0.0</version>
+          <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
